// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Rna Editor Expanded component should render correctly in edit mode 1`] = `
<div
  class="css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value=""
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Base
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Phosphate
      </p>
    </div>
  </div>
  <div
    class="css-68lmnd"
  >
    <span
      class="css-5z4zpe"
    >
      Phosphate position
    </span>
    <div
      class="css-axw7ok"
    >
      <span
        aria-label=""
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-qs4pj7"
          data-testid="phosphate-position-left"
          disabled=""
          type="button"
        >
          5'
        </button>
      </span>
      <span
        aria-label=""
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-1b9vxej"
          data-testid="phosphate-position-right"
          disabled=""
          type="button"
        >
          3'
        </button>
      </span>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-1971dyf"
      data-testid="cancel-btn"
    >
      Cancel
    </button>
    <span
      aria-label=""
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="css-wciliw"
        data-testid="add-to-presets-btn"
        disabled=""
      >
        Add to Presets
      </button>
    </span>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in edit mode with modification of sequence 1`] = `
<div
  class="rna-editor-expanded--sequence-edit-mode css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    disabled=""
    placeholder="Name your structure"
    value="2 nucleotides"
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-p4815w"
      >
        R
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-p4815w"
      >
        [multiple]
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-149rvax"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-p4815w"
      >
        P
      </p>
    </div>
  </div>
  <div
    class="css-68lmnd"
  >
    <span
      class="css-5z4zpe"
    >
      Phosphate position
    </span>
    <div
      class="css-axw7ok"
    >
      <span
        aria-label=""
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-qs4pj7"
          data-testid="phosphate-position-left"
          disabled=""
          type="button"
        >
          5'
        </button>
      </span>
      <span
        aria-label=""
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-1b9vxej"
          data-testid="phosphate-position-right"
          disabled=""
          type="button"
        >
          3'
        </button>
      </span>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-1971dyf"
      data-testid="cancel-btn"
    >
      Cancel
    </button>
    <span
      aria-label=""
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="css-wciliw"
        data-testid="save-btn"
        disabled=""
      >
        Update
      </button>
    </span>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in view mode 1`] = `
<div
  class="css-19n58l"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-9n8o5v"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value="MyRna"
  />
  <div
    class="css-1rkdsvc"
  >
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Base
      </p>
    </div>
    <div
      class="css-iku0qx"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-gcbx4i"
      />
      <div
        class="css-oavnn6"
      >
        <svg
          class="css-gayeoq"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iw6dsc"
      >
        Phosphate
      </p>
    </div>
  </div>
  <div
    class="css-68lmnd"
  >
    <span
      class="css-5z4zpe"
    >
      Phosphate position
    </span>
    <div
      class="css-axw7ok"
    >
      <span
        aria-label="Sugar must have R1, and phosphate must have R2."
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-qs4pj7"
          data-testid="phosphate-position-left"
          disabled=""
          type="button"
        >
          5'
        </button>
      </span>
      <span
        aria-label="Sugar must have R2, and phosphate must have R1."
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="css-1b9vxej"
          data-testid="phosphate-position-right"
          disabled=""
          type="button"
        >
          3'
        </button>
      </span>
    </div>
  </div>
  <div
    class="css-1iug9fi"
  >
    <button
      class="css-1971dyf"
      data-testid="duplicate-btn"
    >
      Duplicate and Edit
    </button>
    <button
      class="css-1971dyf"
      data-testid="edit-btn"
    >
      Edit
    </button>
  </div>
</div>
`;
